<resources>
    <string name="app_name">Music App</string>
    <string name="hi_dot">Hi.</string>
    <string name="hi_exclamation">Hi! </string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="name">Name</string>
    <string name="full_name">full_name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_correct_username">Please enter correct username</string>
    <string name="please_enter_correct_password">Please enter correct password</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="love_to_dance">Love To Dance</string>
    <string name="pinkinlark_llc">PinkinLark LLC</string>
    <string name="the_rockers">The Rockers</string>
    <string name="songs_102">102 Songs</string>
    <string name="dumped_girl">Dumped Girl</string>
    <string name="songs_42">42 Songs</string>
    <string name="the_national">The National</string>
    <string name="songs_23">23 Songs</string>
    <string name="the_range">The Range</string>
    <string name="songs_48">48 Songs</string>
    <string name="albums_866">866 Albums</string>
    <string name="search">Search</string>
    <string name="payments">Payments</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="about_the_app">About the App</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="six">6.</string>
    <string name="play">Play</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="use_as_ringtone">Use as ringtone</string>
    <string name="delete">Delete</string>
    <string name="you_have_selected">You have selected</string>
    <string name="dreaming">Dreaming</string>
    <string name="real_and_true">Real &amp; True</string>
    <string name="within_my_heart">Within My Heart</string>
    <string name="more_than_yesterday">More Than Yesterday</string>
    <string name="calling">Calling</string>
    <string name="two_faced">Two Faced</string>
    <string name="content_description_banner">This is a banner image</string>
    <string name="content_description_profile">This is a profile image</string>
    <string name="content_description_album_art">This is a album art.</string>
    <string name="content_description_button">This is a play/pause button.</string>
    <string name="content_description_play_button">This is a play button.</string>
    <string name="content_description_more_setting_button">This button opens more settings for the listed song.</string>
    <string name="content_description_app_icon">This is an app icon</string>
    <string name="search_button">Search Button</string>
    <string name="version_1_0">Version 1.0.0</string>
    <string name="developed_by">Developed by</string>
    <string name="vaibhav_singh">Vaibhav Singh</string>
    <string name="personal_website_link">https://vaibhavsingh97.me</string>
    <string name="open_source_license">Open Source License</string>
    <string name="welcome_screen_1_summary">This screen ask user to enter full name. This is not full functional authentication system.\nNote: it\'s only a replica.</string>
    <string name="welcome_screen_2_summary">This screen ask user to enter Username. This is not full functional authentication.\nNote: it\'s only a replica.</string>
    <string name="welcome_screen_3_summary">This screen ask user to enter Password. This is not full functional authentication.\nNote: it\'s only a replica.</string>
    <string name="main_screen_summary">This screen shows information about available albums and list the albums in cards.</string>
    <string name="song_list_screen_summary">This screen shows list of songs available in the albums.</string>
    <string name="about_the_app_summary">This screen shows information about the app.</string>
    <string name="open_source_summary">This screen shows information about open source library used in the app.</string>
    <string name="payment_screen_summary">This screen shows information about payment service used in the app.</string>
    <string name="playing_screen_summary">This screen shows playing song information.</string>
    <string name="welcome_to_the_app">Welcome to the Music App. This App customized for best user experience.</string>
    <string name="butterknife">Butterknife</string>
    <string name="butterknife_link">https://github.com/JakeWharton/butterknife</string>
    <string name="butterknife_description">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="payment_description">1. The customer selects the Buy with Android Pay button. Using the Google API, the merchant requests the Masked Wallet object\n\n
    2. The customer confirms the payment. Using the Google API, the merchant requests the Full Wallet object\n\n
    3. Google requests the payment network token and cryptogram from the payment network\n\n
    4. The payment network sends the payment network token and the cryptogram to Google.\n\n
    5. Google creates an encrypted payload using the public key supplied in the Full Wallet request and includes it in the Google API response.\n\n
    6. Android Pay App— call back returns the encrypted payment data to the merchant server.onActivityResult()\n\n
    7. The merchant chooses the Merchant decryption option or the CyberSource decryption option.\n\n
    8. CyberSource returns the authorization response to the merchant.\n\n
    9. The merchant returns the authorization result to the Android app.\n\n
    10.The Android app displays the confirmation or decline message to the customer.</string>
</resources>