<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vaibhav.musicapp.about_the_app">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/AboutTheAppScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/AppIcon"
                android:contentDescription="@string/content_description_app_icon"
                android:src="@drawable/launcher_icon_512" />

            <TextView
                style="@style/AppName"
                android:text="@string/app_name" />

            <TextView
                style="@style/AppVersion"
                android:text="@string/version_1_0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DevlopedBy"
                    android:layout_weight="1"
                    android:text="@string/developed_by" />

                <TextView
                    android:id="@+id/DeveloperName"
                    style="@style/DevloperName"
                    android:layout_weight="1"
                    android:text="@string/vaibhav_singh" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_1dp"
        android:layout_above="@+id/OpenSource"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/OpenSource"
        style="@style/OpenSource"
        android:text="@string/open_source_license" />
</RelativeLayout>
